# urlexpander-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  main  test.http
.github/workflows/: main.yml
src/: expander.rs  hello.rs  main.rs  proxy.rs  resolver.rs  service.rs
