[package]
name = "url-resolver"
edition = "2021"
version = "0.1.4"
authors = ["vjy <reg@iavian.com>"]

[dependencies]
actix-web = "4.5.1"
bytes = "1.6.0"
reqwest = { version = "0.12.2", features = ["json", "brotli", "gzip"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
memcache-async = {version="0.7.0", optional = true }
futures = { version = "0.3.30", optional = true }
regex = "1.10.4"
url = "2.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'

[features]
default = ["memcache"]
memcache = ["memcache-async", "futures"]

