[package]
name = "url-resolver"
edition = "2021"
version = "0.1.4"
authors = ["vjy <reg@iavian.com>"]

[dependencies]
actix-web = "4.9.0"
bytes = "1.7.2"
reqwest = { version = "0.12.7", features = ["json", "brotli", "gzip"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
memcache-async = {version="0.8.0", optional = true }
futures = { version = "0.3.30", optional = true }
regex = "1.11.0"
url = "2.5.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'

[features]
default = ["memcache"]
memcache = ["memcache-async", "futures"]

